--- a/projects/sahu/styles/_tabs.scss
+++ b/projects/sahu/styles/_tabs.scss
@@ -26,9 +26,9 @@
 }
 
 .tab-header>span {
-  align-items: baseline;
+  align-items: center;
   display: flex;
-  gap: 1px;
+  gap: 5px;
   padding: 10px 8px;
 }
 
