--- a/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
+++ b/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
@@ -33,11 +33,26 @@
     <div class="controls">
       <button class="prev" (click)="previousSlide()">&#10094;</button>
       <div class="progress">
-        <button type="button" class="progress-btn btn-zoom_in" (click)="zoomIn()"></button>
-        <button type="button" class="progress-btn btn-zoom_out" (click)="zoomOut()"></button>
-        <button type="button" class="progress-btn btn-zoom_reset" (click)="zoomReset()"></button>
-        <button type="button" class="progress-btn btn-rotate_left" (click)="rotateLeft()"></button>
-        <button type="button" class="progress-btn btn-rotate_right" (click)="rotateRight()"></button>
+        <sh-button
+          [shIcon]="'search-plus'"
+          (shClick)="zoomIn()">
+        </sh-button>
+        <sh-button
+          [shIcon]="'search-minus'"
+          (shClick)="zoomOut()">
+        </sh-button>
+        <sh-button
+          [shIcon]="'sync'"
+          (shClick)="zoomReset()">
+        </sh-button>
+        <sh-button
+          [shIcon]="'undo'"
+          (shClick)="rotateLeft()">
+        </sh-button>
+        <sh-button
+          [shIcon]="'redo'"
+          (shClick)="rotateRight()">
+        </sh-button>
       </div>
       <button class="next" (click)="nextSlide()">&#10095;</button>
     </div>
