--- a/projects/sahu/styles/_slideshow.scss
+++ b/projects/sahu/styles/_slideshow.scss
@@ -20,29 +20,26 @@
   }
 
   .title {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    margin-bottom: 0;
+    margin: 0;
   }
 
   .thumbnail {
-    border: 0px solid #007bff;
-    border-radius: 8px;
+    border: 2px solid transparent;
+    border-radius: 2px;
     cursor: pointer;
     height: 96px;
     object-fit: cover;
-    transition: linear 0.2s;
+    transition: 0.3s;
     width: 148px;
   }
 
   .thumbnail:hover {
-    border-width: 2px;
+    border-color: #005fff;
   }
 
   /* Popup Overlay */
   .popup-overlay {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     height: 100%;
     left: 0;
     opacity: 0;
@@ -110,8 +107,8 @@
     flex-direction: column;
     height: 80vh;
     left: 50%;
-    max-height: 800px;
-    max-width: 1040px;
+    max-height: 660px;
+    max-width: 880px;
     opacity: 0;
     position: fixed;
     text-align: center;
@@ -129,34 +126,17 @@
     visibility: visible;
   }
 
-  .close-btn {
-    background: #6b6b81;
-    border: none;
-    border-radius: 6px;
+  .btn.close-btn {
+    background: #9a9aa4;
+    border-radius: 2px;
+    color: #fff;
     cursor: pointer;
-    height: 27px;
-    padding: 0;
+    font-size: 18px;
+    height: 24px;
     position: absolute;
-    right: 24px;
-    top: calc(50% - 13.5px);
-    width: 27px;
-
-    &::before,
-    &::after {
-      background-color: #fff;
-      border-radius: 9px;
-      content: "";
-      height: 2px;
-      left: 20%;
-      position: absolute;
-      top: calc(50% - 1px);
-      transform: rotate(45deg) scale(.9);
-      width: 60%;
-    }
-
-    &::after {
-      transform: rotate(-45deg) scale(.9);
-    }
+    right: 18px;
+    top: calc(50% - 12px);
+    width: 24px;
   }
 
   /* Slideshow Styles */
@@ -164,15 +144,14 @@
     background-color: #fff;
     border-radius: 2px;
     flex: 1 0 0;
-    margin: auto;
+    margin: 0 18px;
     position: relative;
-    width: calc(100% - 48px);
   }
 
   .slide-item {
     display: none;
     height: 100%;
-    padding: 20px;
+    padding: 18px;
   }
 
   .slide-item.active {
@@ -211,7 +190,7 @@
   .progress {
     align-items: center;
     display: flex;
-    gap: 24px;
+    gap: 8px;
   }
 
   .btn {
