--- a/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
+++ b/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
@@ -18,7 +18,7 @@
   <div class="popup-content">
     <div class="slide-header">
       <h3>{{ shData[currentIndex].title }}</h3>
-      <p><span class="font600">{{currentIndex + 1}}</span> / <span>{{shData.length}} hình</span></p>
+      <p><span>{{currentIndex + 1}}</span> / <span class="font500">{{shData.length}} hình</span></p>
       <sh-button
         [shIcon]="'times'"
         [shVariant]="'blank'"
