--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,5 +1,5 @@
-$primary_color: #0586ff;
-$primary_color_active: #0071dc;
+$primary_color: #196fff;
+$primary_color_active: #0059f4;
 
 $info_color: #56b3f1;
 $info_color_active: #2d98df;
