--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -6,6 +6,7 @@
 @use './input';
 @use './avatar';
 @use './button';
+@use './dropdown';
 @use './pagination';
 @use './select';
 @use './slideshow';
