--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -1,3 +1,4 @@
+@use './variables-global' as *;
 @use './variables';
 @use './fonts';
 
@@ -43,57 +44,84 @@
 }
 
 .sh-reset {
-  background-color: #a0a0a0;
   border-radius: 99px;
-  height: 25px;
-  transform: scale(.6);
-  width: 25px;
-
-  &:before,
-  &:after {
-    background-color: #fff;
-    border-radius: 99px;
-    content: "";
-    height: 2px;
-    left: 20%;
-    position: absolute;
-    top: calc(50% - 1px);
-    transform: rotate(45deg);
-    width: 60%;
-  }
-
-  &:after {
-    transform: rotate(-45deg);
-  }
+  color: #808080;
+  font-size: 15px;
+  height: fit-content;
+  width: fit-content;
 }
 
 .sh-control {
   background-color: #fbfbfb;
   border: 1px solid #dbdbdb;
   border-radius: 2px;
+  display: flex;
   transition: 0.3s;
+}
+
+.sh-control .icon {
+  align-items: center;
+  color: #777;
+  display: flex;
+  flex: 10px 0 0;
+  height: 100%;
+  justify-content: center;
+  padding: 5px 0 5px 10px;
+}
+
+.sh-control input~.icon {
+  padding: 5px 10px 5px 0;
+}
+
+.sh-control-xs {
+  font-size: 13px;
+  height: 28px;
 }
 
 .sh-control-sm {
   font-size: 13px;
-  font-weight: 400;
-  height: 28px;
+  height: 30px;
 }
 
 .sh-control-md {
   font-size: 14px;
-  font-weight: 400;
   height: 32px;
 }
 
 .sh-control-lg {
   font-size: 15px;
-  font-weight: 500;
-  height: 36px;
+  height: 34px;
 }
 
 .sh-control-xl {
-  font-size: 16px;
-  font-weight: 500;
-  height: 40px;
+  font-size: 15px;
+  height: 36px;
+}
+
+.control-focus {
+  background-color: #f9f9f9;
+  border-color: $primary_color;
+}
+
+.control-focus .icon {
+  color: $primary_color;
+}
+
+.control-value {
+  background-color: #fbfbfb;
+  border-color: #cfcfcf;
+}
+
+.control-value .icon {
+  color: $primary_color_text;
+}
+
+.control-disabled {
+  background-color: #dcdcdc;
+  border-color: #afafaf;
+  cursor: not-allowed;
+}
+
+.control-disabled input {
+  cursor: not-allowed;
 }
