--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,5 +1,5 @@
-$primary_color: #196fff;
-$primary_color_active: #0059f4;
+$primary_color: #4186ff;
+$primary_color_active: #1568f8;
 
 $info_color: #56b3f1;
 $info_color_active: #2d98df;
