--- a/projects/sahu/src/lib/sh-modal/sh-modal.component.html
+++ b/projects/sahu/src/lib/sh-modal/sh-modal.component.html
@@ -1,12 +1,9 @@
-<div class="sh-modal md-{{shMdType}} md-{{shMdSize}} {{shMdClass}} {{shVisible ? 'md-visible' : ''}}">
+<div class="sh-modal md-{{shType}} md-{{shSize}} {{shClass}} {{shVisible ? 'md-visible' : ''}}">
   <div class="md-backdrop" (click)="handleCancel($event)"></div>
   <div class="md-content">
 
     <ng-container *ngIf="shHead">
       <div class="md-head" [ngClass]="shHeadClass">
-        <ng-container *ngIf="iconElement">
-          <span [innerHTML]="iconElement"></span>
-        </ng-container>
         {{ shTitle }}
       </div>
     </ng-container>
@@ -15,8 +12,8 @@
 
     <ng-container *ngIf="shFoot">
       <div class="md-foot" [ngClass]="shFootClass">
-        <sh-button (click)="handleCancel($event)" [shClass]="'default'">Đóng</sh-button>
-        <sh-button (click)="handleOk($event)" [shClass]="'primary'">Ok</sh-button>
+        <sh-button (shClick)="handleCancel($event)">Đóng</sh-button>
+        <sh-button (shClick)="handleOk($event)">Ok</sh-button>
       </div>
     </ng-container>
 
