--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -9,7 +9,7 @@ input {
   color: $primary_color_text;
   height: 100%;
   margin: 0;
-  padding: 1px 12px 2px;
+  padding: 1px 0 2px;
   width: 100%;
 }
 
