--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -45,11 +45,7 @@
 }
 
 .sh-reset {
-  border-radius: 99px;
   color: #808080;
-  font-size: 15px;
-  height: fit-content;
-  width: fit-content;
 }
 
 .sh-control {
@@ -57,6 +53,8 @@
   border: 1px solid #dbdbdb;
   border-radius: 2px;
   display: flex;
+  gap: 10px;
+  padding: 0 10px;
   transition: 0.3s;
 }
 
@@ -67,11 +65,6 @@
   flex: 10px 0 0;
   height: 100%;
   justify-content: center;
-  padding: 5px 0 5px 10px;
-}
-
-.sh-control input~.icon {
-  padding: 5px 10px 5px 0;
 }
 
 .sh-control-xs {
