--- a/projects/sahu/styles/_avatar.scss
+++ b/projects/sahu/styles/_avatar.scss
@@ -7,24 +7,22 @@
 }
 
 .sh-avatar {
-  height: 48px;
   position: relative;
-  width: 48px;
 }
 
-.sh-avatar-large {
-  height: 64px;
-  width: 64px;
+.sh-avatar-lg {
+  height: 42px;
+  width: 42px;
 }
 
-.sh-avatar-default {
-  height: 48px;
-  width: 48px;
+.sh-avatar-md {
+  height: 36px;
+  width: 36px;
 }
 
-.sh-avatar-small {
-  height: 32px;
-  width: 32px;
+.sh-avatar-sm {
+  height: 30px;
+  width: 30px;
 }
 
 .sh-avatar-icon {
