--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -157,16 +157,15 @@ input:focus-visible {
 
 .sh-file {
   background-color: #f2f2f2;
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='16' ry='16' stroke='%23CEA709' stroke-width='4' stroke-dasharray='8%2c 9' stroke-dashoffset='5' stroke-linecap='round'/%3e%3c/svg%3e");
-  border-radius: 16px;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='2' ry='2' stroke='%23CEA709' stroke-width='2' stroke-dasharray='4%2c 5' stroke-dashoffset='5' stroke-linecap='round'/%3e%3c/svg%3e");
+  border-radius: 2px;
   cursor: pointer;
   display: flex;
-  height: 200px;
-  margin: auto;
+  height: 70px;
   max-width: 100%;
   position: relative;
   transition: .3s;
-  width: 320px;
+  width: 106px;
 
   input {
     background-color: transparent;
@@ -184,11 +183,10 @@ input:focus-visible {
   .remark {
     align-items: center;
     background-color: transparent;
-    color: #6b6b81;
+    color: #b0b0b0;
     display: flex;
     flex-direction: column;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 30px;
     gap: 7px;
     height: 100%;
     justify-content: center;
@@ -196,19 +194,6 @@ input:focus-visible {
     position: absolute;
     top: 0;
     width: 100%;
-
-    &::before {
-      background: transparent url("/assets/images/icons/ico-image.svg") no-repeat center center / 100%;
-      border: 0px solid;
-      content: "";
-      height: 62px;
-      transition: .3s;
-      width: 62px;
-    }
-
-    p {
-      margin: 0;
-    }
   }
 
   img {
@@ -238,14 +223,6 @@ input:focus-visible {
     transition: .3s;
     width: 27px;
     z-index: 10;
-  }
-
-  &.loading .remark:before {
-    animation: spin 2s infinite linear;
-    background-size: 0;
-    border-color: #ccc #CEA709 #ccc #ccc;
-    border-radius: 999px;
-    border-width: 3px;
   }
 
   &.active img {
