--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -209,19 +209,13 @@ input:focus-visible {
   }
 
   button {
-    background-color: #fff;
-    border: none;
-    border-radius: 99px;
-    cursor: pointer;
-    height: 27px;
-    line-height: 1;
-    padding: 0;
+    color: #404040;
+    font-size: 16px;
     position: absolute;
     right: -5px;
     top: -7px;
     transform: scale(0);
     transition: .3s;
-    width: 27px;
     z-index: 10;
   }
 
